--- a/Projecte_IA_nb.ipynb
+++ b/Projecte_IA_nb.ipynb
@@ -24,6 +24,15 @@
    "id": "0ad5ab14-3f2a-4d14-b124-978a4abed01b",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#Hola mamelones\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
